# qi

./: .gitignore
src/OSGWrapper/src/: CMakeLists.txt
src/OSGWrapper/src/OSGWrapper/: Animation.cpp  AnimationScheduler.cpp  ArrayCreator.cpp  AttributeUtilNode.cpp  AxisCreator.cpp  ColorIndexPicker.cpp  ColorPanel.cpp  EraseGeometry.cpp  FeedbackProgram.cpp  FreetypeFont.cpp  FreetypeFontManager.cpp  GeodeCreator.cpp  GeometryCreator.cpp  ManipulableNode.cpp  Manipulator.cpp  MatrixAnimation.cpp  MatrixDeltaAnimation.cpp  OSGMathUtil.cpp  ProgramDef.h  ProgramManager.cpp  Quad.cpp  RenderScene.cpp  RenderService.cpp  RenderView.cpp  ScreenDistanceIndicator.cpp  ScreenDividingRule.cpp  ScreenLineText.cpp  ScreenQuad.cpp  ScreenSingleText.cpp  ShaderString.h  SimpleRenderThread.cpp  TextureManager.cpp  UIItem.cpp  UIPanel.cpp  UIQuad.cpp  UIRoot.cpp  UnionTexture.cpp  UtilCreator.cpp
src/OSGWrapper/src/OSGWrapper/shaders/: antique.frag  ball430.frag  ball430.vert  clip430.frag  clip430.vert  cmd430.frag  cmd430.vert  color430.frag  color430.vert  colorpanel.frag  colorpanel.vert  colorrobot.frag  colorrobot.vert  curvature430.vert  curvature430_ex.vert  distancephong.frag  distancephong.vert  double_phong430.frag  energycolor430.vert  erase_render430.frag  erase_render430.vert  esscanning.vert  feed_copy.vert  feed_delete.vert  feed_deleteall.vert  feed_erase.vert  feed_flip.vert  feed_lasso_test.vert  feed_multiquaderase.vert  feed_quaderase.vert  feed_reserve.vert  feed_selectall.vert  feed_triangle.vert  feedback_erase430.vert  harmonic_ball430.frag  harmonic_ball430.vert  harmonic_phong430.frag  harmonic_phong430.vert  keyframe.frag  keyframe.vert  (+51 more)
src/OSGWrapper/src/include/osgWrapper/: Animation.h  AnimationScheduler.h  ArrayCreator.h  AttributeUtilNode.h  AxisCreator.h  ColorIndexPicker.h  ColorPanel.h  EraseGeometry.h  FeedbackProgram.h  FreetypeFont.h  FreetypeFontManager.h  GeodeCreator.h  GeometryCreator.h  ManipulableNode.h  Manipulator.h  MatrixAnimation.h  MatrixDeltaAnimation.h  OSGMathUtil.h  OSGWrapperExporter.h  ProcessMode.h  ProgramManager.h  Quad.h  RenderScene.h  RenderService.h  RenderView.h  ScreenDistanceIndicator.h  ScreenDividingRule.h  ScreenLineText.h  ScreenQuad.h  ScreenSingleText.h  SimMain.cpp  SimMain.h  SimMain_Ex.cpp  SimMain_Ex.h  SimpleRenderThread.h  Singleton.h  StateDeclare.h  TextureManager.h  UIItem.h  UIPanel.h  (+5 more)
src/OpenCASCADE/src/: CMakeLists.txt  README  codeblocks.sh  custom.sh  env.sh
src/OpenCASCADE/src/adm/cmake/: CMakeLists.txt
src/OpenCASCADE/src/adm/cmake/TKDCAF/: CMakeLists.txt
src/OpenCASCADE/src/adm/cmake/TKDraw/: CMakeLists.txt
src/OpenCASCADE/src/adm/cmake/TKFillet/: CMakeLists.txt
src/OpenCASCADE/src/adm/cmake/TKGeomAlgo/: CMakeLists.txt
src/OpenCASCADE/src/adm/cmake/TKHLR/: CMakeLists.txt
src/OpenCASCADE/src/adm/cmake/TKMesh/: CMakeLists.txt
src/OpenCASCADE/src/adm/cmake/TKNIS/: CMakeLists.txt
src/OpenCASCADE/src/adm/cmake/TKOpenGl/: CMakeLists.txt
src/OpenCASCADE/src/adm/cmake/TKPCAF/: CMakeLists.txt
src/OpenCASCADE/src/adm/cmake/TKQADraw/: CMakeLists.txt
src/OpenCASCADE/src/adm/cmake/TKService/: CMakeLists.txt
src/OpenCASCADE/src/samples/CSharp/: msvc.bat  run.bat
src/OpenCASCADE/src/tests/xml/: begin
src/Python/src/: CMakeLists.txt  python.bat
src/Python/src/PCbuild/: pcbuild.sln
src/QScintilla/src/: CMakeLists.txt
src/QScintilla/src/Qt4Qt5/: CMakeLists.txt
src/QScintilla/src/Qt4Qt5/Qsci/: qsciapis.h
src/QScintilla/src/example-Qt4Qt5/: CMakeLists.txt  mainwindow.cpp
src/QScintilla/src/src/: EditView.cpp
src/ZeGrapher/src/: CMakeLists.txt
src/ZeGrapher/src/ValuesTable/: functable.cpp  seqtable.cpp
src/ZeGrapher/src/Widgets/: datawidget.cpp
src/ZeGrapher/src/Windows/: export.h
src/glew/src/: CMakeLists.txt
src/jupiterwangq/src/: CMakeLists.txt  main.cpp
src/jupiterwangq/src/math/: CMakeLists.txt  jupiterwangq_math.cpp  jupiterwangq_math.h
src/kColorPicker/src/: CMakeLists.txt
src/kColorPicker/src/example/: CMakeLists.txt  main.cpp
src/kImageAnnotator/src/: CMakeLists.txt
src/kImageAnnotator/src/example/: CMakeLists.txt
src/kImageAnnotator/src/src/widgets/: CustomSpinBox.cpp  CustomSpinBox.h  NumberPicker.cpp
src/lua/src/: CMakeLists.txt
src/oggvorbis/src/: CMakeLists.txt
src/opusfile/src/: CMakeLists.txt
src/qchecker/src/LEDChecker/: CMakeLists.txt  ledcheckerinstance.cpp  ledcheckerinstance.h  ledcheckermainwindow.cpp  ledcheckermainwindow.h  main.cpp
src/qchecker/src/LEDChecker/ui/: ledchecker.ui
src/qcustomplot/src/: CMakeLists.txt
src/qt3ddev/src/: CMakeLists.txt
src/qt3ddev/src/basicshapes-cpp/: CMakeLists.txt
src/qt3ddev/src/simple/: CMakeLists.txt  main.cpp  scenemodifier.cpp  scenemodifier.h
src/qtmindmap/src/: CMakeLists.txt
src/qtmindmap/src/src/: main.cpp  mainwindow.cpp
src/qtsourceseeker/src/: CMakeLists.txt  widget.cpp
src/quazip/src/qztest/: CMakeLists.txt
src/quine/src/: CMakeLists.txt  quine_cpp_1.cpp  quine_cpp_2.cpp  quine_cpp_3.cpp  quine_cpp_4.cpp  quine_cpp_5.cpp
src/sdlpal/src/: CMakeLists.txt  main.c  map.c  script.c
src/sdlpal/src/win32/: RCa77664
src/structuresynth/src/: CMakeLists.txt  Main.cpp  StructureSynth.pro  changelog.txt  notes.txt
src/structuresynth/src/Examples/: Ball.es
src/structuresynth/src/Misc/: about.html
src/structuresynth/src/StructureSynth/GUI/: MainWindow.cpp  MainWindow.h  TemplateExportDialog.cpp  TemplateExportDialog.h
src/structuresynth/src/StructureSynth/JavaScriptSupport/: Debug.cpp  JavaScriptBuilder.cpp  JavaScriptParser.cpp
src/structuresynth/src/StructureSynth/Model/: Action.cpp  Builder.cpp  CustomRule.cpp  Rule.h  RuleSet.cpp
src/structuresynth/src/StructureSynth/Parser/: EisenParser.cpp  Tokenizer.cpp  Tokenizer.h
src/structuresynth/src/SyntopiaCore/GLEngine/: EngineWidget.cpp  EngineWidget.h  Object3D.h  Sphere.h
src/structuresynth/src/SyntopiaCore/Logging/: ListWidgetLogger.cpp  ListWidgetLogger.h  Logging.cpp  Logging.h
src/structuresynth/src/SyntopiaCore/Misc/: MiscDataCenter.cpp  MiscDataCenter.h  Version.cpp  Version.h
(+496 files in other folders)
